--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  
   cupertino_icons: ^1.0.2
+  flutter_native_splash: ^2.2.13
+  flutter_launcher_icons: "^0.10.0"
+  google_fonts: ^3.0.1
+  string_validator: ^0.3.0
+
+flutter_native_splash:
+  color: '#FFFFFF'
+  image: './assets/splash.png'
+  android: true
+  ios: true
+
+flutter_icons:
+  image_path: './assets/logo.png'
+  ios: true
+  remove_alpha_ios: true
+  android: 'launcher_icon'
+  adaptive_icon_background: '#FFFFFF'
+  adaptive_icon_foreground: './assets/icon_android.png'
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +75,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logo.png
+    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -75,12 +90,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Nunito
+      fonts:
+        - asset: assets/fonts/Nunito-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Nunito-SemiBold.ttf
+          weight: 600
+          
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
