--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,16 +31,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter 
   
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.2.13
-  flutter_launcher_icons: "^0.10.0"
+  flutter_launcher_icons: ^0.11.0
   google_fonts: ^3.0.1
   string_validator: ^0.3.0
 
   # mobX
   mobx: ^2.1.1
   flutter_mobx: ^2.0.6+4
+  intl: ^0.17.0
+
+  #firebase
+  firebase_core: ^2.2.0
+  firebase_auth: ^4.1.2
+  cloud_firestore: ^4.0.2
+  get:
+  
+# end dependencies
 
 flutter_native_splash:
   color: '#FFFFFF'
