--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   firebase_auth: ^4.1.2
   cloud_firestore: ^4.0.2
   get:
+  firebase_storage: ^11.0.6
+  camera_camera: ^2.0.2
+  image_picker: ^0.8.6
   
 # end dependencies
 
