--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   camera_camera: ^2.0.2
   path_provider: ^2.0.11
   image_picker: ^0.8.6
+  shared_preferences: ^2.0.15
   
 # end dependencies
 
